# fxraw

./: .gitignore  Cargo.toml  README.md  mise.toml
data/: extra_recipes.json  recipes.json
docs/: PROTOCOL.md  RESEARCH.md
scripts/: build_recipes  test_all_recipes.sh  test_recipe.sh
src/: analyse.rs  config.rs  detect.rs  fuji.rs  lib.rs  main.rs  profile.rs  ptp.rs  recipes.rs  ui.rs
tests/: e2e_convert.rs
tests/fixtures/: fjx.toml  fxraw.toml
