[package]
name = "fxraw"
version = "0.2.0"
edition = "2024"

[dependencies]
rusb = "0.9"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.18.4"
console = "0.16.2"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
